--- a/converter.html
+++ b/converter.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="RomanNumeralConverter/converter.js"></script>
+    <script src="converter.js"></script>
 </body>
 </html>
